# audio-video-codification

./: .gitignore  FCM.cpp  FCM.h  README.md  a.out  run.cpp  run.out
assignment1/: .FCM.cpp.swp  .FCM.h.swp  .gitignore  .grey.txt.swp  .run.cpp.swp  FCM.cpp  FCM.h  Makefile  README.md  n.cpp  n.out  normalizer.cpp  run.cpp  run.ou  run.out  saved_LUT
assignment2/: .BitStream.cpp.swp  .BitStream.h.swp  BitStream.cpp
audio-encoder/: .BitStream.cpp.swo  .BitStream.h.swo  .Golomb.cpp.swo  .Predictor.cpp.swk  .Predictor.cpp.swl  .Predictor.cpp.swm  .Predictor.cpp.swn  .Predictor.cpp.swo  .Predictor.h.swo  BitStream.cpp  BitStream.cpp.bak  BitStream.h  Golomb.cpp  Golomb.cpp.bak  Golomb.h  Makefile  Predictor.cpp  Predictor.h  Predictor_stats.cpp  README  encoder.cpp  file  hello.cpp  metadata  predictor.cpp  readbits.cpp  run.cpp  test  test.cpp  test_predictor.cpp  test_predictor2.cpp  test_predictor3.cpp  test_reverse.cpp  test_reverse_predictor.cpp  test_reverse_predictor2.cpp  test_reverse_predictor3.cpp  teste.cpp  w  writebits.cpp
finite-context-models/: FCM.h  Makefile  run.cpp
video-encoder/: .Predictor.cpp.swo  BitStream.cpp  BitStream.h  CMakeCache.txt  CMakeLists.txt  Golomb.cpp  Golomb.h  Golomb1.cpp  Golomb2.h  LoadRawVideo.cpp  Makefile  Predictor.cpp  Predictor.cpp.bak  Predictor.cpp.bak2  Predictor.h  Predictor2.cpp  RUNME  S1Predictor.cpp  SaveVideo.cpp  SpatialPredictor.cpp  build.sh  build_decoder_only.sh  clean_build.sh  cmake_install.cmake  compressed  count.py  decoded_video.rgb  diff.txt  droliveiras  encvid  hist.txt  hybrid_decoder.cpp  hybrid_encoder.cpp  run.sh  temporal_decoder.cpp  temporal_encoder.cpp  test.cpp  test_aula.cpp  test_hybrid_decoder.cpp  test_hybrid_encoder.cpp  (+5 more)
